# loaf-control

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  claude.md  pyproject.toml  template.yaml
loaves/: loaf-006.yaml  loaf-007.yaml  loaf-008.yaml
scripts/: calculate.py  validate.py
tests/: conftest.py  test_calculate.py  test_validate.py
